# polyglot-ledger-engine

./: .gitignore  dev-notes.md  docker-compose.yml
frontend/src-tauri/: tauri.conf.json
go-api/: Dockerfile  go.mod  go.sum  main.go  main_test.go
rust-engine/: .env  Cargo.toml  Dockerfile  docker-compose.yml
rust-engine/src/: main.rs
rust-engine/src/core/: transact.rs  worker.rs
rust-engine/src/models/: account.rs  transaction.rs
