[package]
name = "rust-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.52", features = ["derive"] }
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "rust_decimal", "macros"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
rust_decimal_macros = "1.39.0"
